Prevent TOCs from overflowing the page width

--- a/assets/css/slimeknights.scss
+++ b/assets/css/slimeknights.scss
@@ -108,6 +108,7 @@ h2 {
 .toc {
     width: max-content;
     font-size: small;
+    max-width: 100%;
     
     .uk-open .uk-accordion-title {
         margin-bottom: -15px;
